<resources>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_otp_sent_to_xxxxxxx8196">Enter OTP Sent To xxxxxxx8196</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP? </string>
    <string name="verify_and_proceed">VERIFY AND PROCEED</string>
    <string name="cancel">CANCEL</string>
    <string name="home">GO TO CHECKOUT PAGE</string>
    <string name="review_payment">Review Payment</string>
    <string name="pay_now">PAY NOW</string>
    <string name="verify_button">VERIFY AND PROCEED</string>
</resources>
